--- a/CodeGenerationTool/Podfile
+++ b/CodeGenerationTool/Podfile
@@ -7,6 +7,7 @@ target 'CodeGenerationTool' do
 
   pod 'MJExtension'
   pod 'Masonry'
+	pod 'AFNetworking'
   # Pods for CodeGenerationTool
 
   target 'CodeGenerationToolTests' do
