--- a/CodeGenerationTool/CodeGenerationTool/Info.plist
+++ b/CodeGenerationTool/CodeGenerationTool/Info.plist
@@ -2,8 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>访问蓝牙设备权限以管理设备</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>访问蓝牙外设权限以管理设备</string>
 	<key>NSCameraUsageDescription</key>
-	<string></string>
+	<string>访问相机权限以管理设备</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>访问麦克风权限以用于音频播放</string>
 	<key>CFBundleDevelopmentRegion</key>
