update:添加新的模块

--- a/CodeGenerationTool/Main/ClassInfo.plist
+++ b/CodeGenerationTool/Main/ClassInfo.plist
@@ -42,7 +42,7 @@
 		</dict>
 		<dict>
 			<key>name</key>
-			<string>opengl</string>
+			<string>graphics</string>
 			<key>winCol</key>
 			<string>CGTOpenglWindowController</string>
 		</dict>
